Re-added images

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-								<img src="/Portfollio/images/signature5cc3b482d3cef.png" alt=""  width="420px"  class="image-fit">
+								<img src="/images/signature5cc3b482d3cef.png" alt=""  width="420px"  class="image-fit">
 							</header>
 							<p class="description"> a web designer</p>
 							<a href="#work" class="button large scrolly big">Learn about what I do</a>
@@ -48,7 +48,7 @@
 				<div class="container">
 					<header>
 						<h2>HERE'S SOME OF THE STUFF I DO.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<p>Well, I love a rainy night; it's such a beautiful sight.</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
@@ -90,42 +90,42 @@
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://codepen.io/majik895/pen/vPqxwm"target="_blank" class="image featured"><img src="/Portfollio/images/depositphotos_64467369-stock-illustration-flat-design-illustration-concept-for.jpg" alt="poof" /></a>
+								<a href="https://codepen.io/majik895/pen/vPqxwm"target="_blank" class="image featured"><img src="/images/depositphotos_64467369-stock-illustration-flat-design-illustration-concept-for.jpg" alt="poof" /></a>
 								<h3><a href="#">My First Modal</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/SirAndrewDillon/Respnsive-Website"target="_blank" class="image featured"><img src="/Portfollio/images/Responsive_Website_Design.jpg" alt="" /></a>
+								<a href="https://github.com/SirAndrewDillon/Respnsive-Website"target="_blank" class="image featured"><img src="/images/Responsive_Website_Design.jpg" alt="" /></a>
 								<h3><a href="#">Responsive Web Site</a></h3>
 								<p> A must in todays fast paced world.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/SirAndrewDillon/landing/blob/master/index.html"target="_blank" class="image featured"><img src="/Portfollio/images/web-design-creation-site-web.jpg" alt="" /></a>
+								<a href="https://github.com/SirAndrewDillon/landing/blob/master/index.html"target="_blank" class="image featured"><img src="/images/web-design-creation-site-web.jpg" alt="" /></a>
 								<h3><a href="#">Landing Page</a></h3>
 								<p>Just what your company needs.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/SirAndrewDillon/Typing-Game"target="_blank" class="image featured"><img src="/Portfollio/images/typing.jpg" alt="" /></a>
+								<a href="https://github.com/SirAndrewDillon/Typing-Game"target="_blank" class="image featured"><img src="/images/typing.jpg" alt="" /></a>
 								<h3><a href="#">JavaScript Typing Game</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/SirAndrewDillon/YouTube-Clone"target="_blank" class="image featured"><img src="/Portfollio/images/StreamTube-Youtube-Clone-Script.png" alt="" /></a>
+								<a href="https://github.com/SirAndrewDillon/YouTube-Clone"target="_blank" class="image featured"><img src="/images/StreamTube-Youtube-Clone-Script.png" alt="" /></a>
 								<h3>A YouTube Clone</h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="https://github.com/SirAndrewDillon/Perfect-Cocktail"target="_blank" class="image featured"><img src="/Portfollio/images/920x920.jpg" alt="" /></a>
+								<a href="https://github.com/SirAndrewDillon/Perfect-Cocktail"target="_blank" class="image featured"><img src="/images/920x920.jpg" alt="" /></a>
 								<h3><a href="#">Perfect Cocktail App</a></h3>
 								<p>Ornare nulla proin odio consequat.</p>
 							</article>
